--- a/packages/theme/default/index.less
+++ b/packages/theme/default/index.less
@@ -4,3 +4,9 @@
 @import url('./overlay.less');
 @import url('./image.less');
 @import url('./avatar.less');
+@import url('./overlay.less');
+@import url('./icon.less');
+@import url('./button.less');
+@import url('./tag.less');
+@import url('./badge.less');
+@import url('./backtop.less');
