--- a/packages/theme/default/overlay.less
+++ b/packages/theme/default/overlay.less
@@ -1,14 +1,14 @@
-.overlay {
+.mzzs-overlay {
     --overlay-z-index: 100;
-    --overlay-background-color: rgba(0, 0, 0, 0.3);
+    --overlay-background-color: rgba(0, 0, 0, 0.8);
 }
 
-.overlay {
+.mzzs-overlay {
     position: fixed;
     top: 0;
     left: 0;
-    z-index: var(--overlay-z-index);
     width: 100%;
     height: 100%;
+    z-index: var(--overlay-z-index);
     background:var(--overlay-background-color);
 }
