--- a/packages/theme/default/index.less
+++ b/packages/theme/default/index.less
@@ -10,3 +10,5 @@
 @import url('./tag.less');
 @import url('./badge.less');
 @import url('./backtop.less');
+@import url('./tabs.less');
+@import url('./tab-pane.less');
