--- a/packages/theme/default/base.less
+++ b/packages/theme/default/base.less
@@ -1,14 +1,17 @@
 :root {
+    // 字体大小
     --mzzs-font-size-xs: 0.625rem;
     --mzzs-font-size-sm: 0.875rem;
     --mzzs-font-size-md: 1rem;
     --mzzs-font-size-lg: 1.25rem;
 
-    --mzzs-line-height-xs: 0.625rem;
-    --mzzs-line-height-sm: 0.875rem;
-    --mzzs-line-height-md: 1rem;
-    --mzzs-line-height-lg: 1.25rem;
+    // 行高
+    --mzzs-line-height-xs: 14px;
+    --mzzs-line-height-sm: 18px;
+    --mzzs-line-height-md: 20px;
+    --mzzs-line-height-lg: 22px;
 
+    // paading
     --mzzs-padding-base: 4px;
     --mzzs-padding-xs: 8px;
     --mzzs-padding-sm: 12px;
@@ -16,6 +19,7 @@
     --mzzs-padding-lg: 24px;
     --mzzs-padding-xl: 32px;
 
+    // margin
     --mzzs-margin-base: 4px;
     --mzzs-margin-xs: 8px;
     --mzzs-margin-sm: 12px;
@@ -23,18 +27,13 @@
     --mzzs-margin-lg: 24px;
     --mzzs-margin-xl: 32px;
 
+    // border-radius
     --mzzs-border-radius-sm: 2px;
     --mzzs-border-radius-md: 4px;
     --mzzs-border-radius-lg: 8px;
     --mzzs-border-radius-max: 999px;
 
-
-    --mzzs-z-index: 5;
-    --mzzs-box-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
-    --mzzs-border-base: 1px solid #dcdfe6;
-
-    --mzzs-white-color: #ffffff;
-    --mzzs-block-color: #333333;
+    // color
     --mzzs-gray-1: #f7f8fa;
     --mzzs-gray-2: #f2f3f5;
     --mzzs-gray-3: #ebedf0;
@@ -43,12 +42,100 @@
     --mzzs-gray-6: #969799;
     --mzzs-gray-7: #646566;
     --mzzs-gray-8: #323233;
-    --mzzs-primary-color: #409eff;
-    --mzzs-success-color: #67c23a;
-    --mzzs-danger-color: #909399;
-    --mzzs-warning-color: #e6a23c;
-    --mzzs-info-color: #f56c6c;
-}
+    --mzzs-color-white: #ffffff;
+    --mzzs-color-block: #333333;
+    --mzzs-color-primary: #409eff;
+    --mzzs-color-success: #67c23a;
+    --mzzs-color-error: #ee0a24;
+    --mzzs-color-info: #909399;
+    --mzzs-color-warning: #e6a23c;
+    --mzzs-color-danger: #f56c6c;
+    --mzzs-color-primary-light: #ecf5ff;
+    --mzzs-color-success-light: #f0f9eb;
+    --mzzs-color-error-light: #ffdce0;
+    --mzzs-color-info-light: #f4f4f5;
+    --mzzs-color-warning-light: #fdf6ec;
+    --mzzs-color-danger-light: #fef0f0;
+    
+    // base
+    --mzzs-text-color: var(--mzzs-gray-8);
+    --mzzs-text-active-color: var(--mzzs-gray-2);
+    --mzzs-disabled-opacity: 0.5;
+    --mzzs-box-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
+    --mzzs-border-color: #dcdfe6;
+    --mzzs-border-width: 1px;
+    --mzzs-border-base: 1px solid var(--mzzs-border-color);
+    --mzzs-z-index: 3225;
 
-.no-scrolling { overflow: hidden; }
-.clickable { cursor: pointer; }
+    // animation
+    --mzzs-animation-duration-base: 0.3s;
+    --mzzs-animation-duration-fast: 0.2s;
+    --mzzs-animation-timing-function-enter: ease-out;
+    --mzzs-animation-timing-function-leave: ease-in;
+}
+.no-scrolling {
+    overflow: hidden;
+}
+.clickable {
+    cursor: pointer;
+}
+.mzzs-ellipsis {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+.mzzs-ellipsis--l2, .mzzs-ellipsis--l3 {
+    display: -webkit-box;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+.mzzs-ellipsis--l3 {
+    -webkit-line-clamp: 3;
+}
+[class*='mzzs-hairline']::after {
+    content: '';
+    position: absolute;
+    left: -50%;
+    right: -50%;
+    top: -50%;
+    bottom: -50%;
+    transform: scale(0.5);
+    border: var(--mzzs-border-base);
+    box-sizing: border-box;
+    pointer-events: none;
+}
+.mzzs-hairline {
+    position: relative;
+    &--top {
+        position: relative;
+        &::after {
+            border-width: 1px 0 0 0;
+        }
+    }
+    &--right {
+        position: relative;
+        &::after {
+            border-width: 0 1px 0 0;
+        }
+    }
+    &--bottom {
+        position: relative;
+        &::after {
+            border-width: 0 0 1px 0;
+        }
+    }
+    &--left {
+        position: relative;
+        &::after {
+            border-width: 0 0 0 1px;
+        }
+    }
+    &--top-bottom {
+        position: relative;
+        &::after {
+            border-width: 1px 0;
+        }
+    }
+}
