2021/11/22 每日文件上传

--- a/packages/theme/default/color-picker.less
+++ b/packages/theme/default/color-picker.less
@@ -85,6 +85,7 @@
         width: var(--color-svpanel-width);
         height: var(--color-hue-slider-bar-stroke);
         margin-top: var(--color-block-space);
+        background-image: var(--color-background);
         &-bar {
             height: inherit;
             background: linear-gradient(to right, rgba(255, 0, 0, 0) 0%, rgb(255, 0, 0) 100%);
