--- a/packages/theme/default/index.less
+++ b/packages/theme/default/index.less
@@ -1,4 +1,5 @@
 @import url('./base.less');
+@import url('./transition.less');
 @import url('./row.less');
 @import url('./col.less');
 @import url('./overlay.less');
@@ -14,3 +15,5 @@
 @import url('./tab-pane.less');
 @import url('./cell.less');
 @import url('./color-picker.less');
+@import url('./popover.less');
+@import url('./collapse.less');
